@@ -1,5 +1,5 @@
 package = "s3cmd"
-version = "0.9.5"
+version = "0.9.6"
 url = "http://s3tools.logix.cz"
 license = "GPL version 2"
 short_description = "S3cmd is a tool for managing Amazon S3 storage space."
